Remove use of deprecated KPassivePopup

Removed completely because the popup displayed the same date as
displayed in the date field itself, making it unneeded imo. This fixes
the popup rapidly appearing and disappearing on Wayland when the date
field has focus, making it very hard to input a date.

BUG: 446990
FIXED-IN: 5.1.3

(cherry picked from commit fce954bd1648ef1d1588b8ae753421be9c7a5fec)